# SecretaryAI

./: .dockerignore  .env.example  .gitignore  =1.2.0  AGENTS.md  Dockerfile  LAUNCH.md  README.md  dashboard_response.txt  docker-compose.yml  gen_session.py  plan.md  pyproject.toml  test-plan-silero-tts.md  test_gemini_audio.py  test_pipeline.py  tmp_dashboard_script.js
.telegram/: secretary.session  secretary.session-journal
.telegram/cache/: calendar_events.json  calendar_events.sim.json  calendar_queue.json  calendar_queue.sim.json  live_reply_templates.json  reminder_state.json  reminder_state.sim.json
.telegram/logs/: live_debug.jsonl
.telegram/memory/: long_term.jsonl  mid_term.json  short_term.json
src/secretary_ai/: __init__.py  main.py
src/secretary_ai/api/: routes.py
telegram_bot/: .env.example  .gitignore  README.md  pyproject.toml
telegram_bot/bot/: agent.py  config.py  files.py  main.py  reminders.py  tools.py
telegram_bot/db/: models.py  session.py
telegram_bot/scripts/: seed.py
telegram_bot/service/: google_calendar.py  search.py
telegram_bot/shared/: context_builder.py
tests/: test_ai_agent.py  test_booking.py  test_booking_templates.py  test_calendar_heuristic_datetime.py  test_calendar_reminder_no_stt_flow.py  test_calendar_service.py  test_contacts.py  test_live_robustness.py  test_live_templates.py  test_maps_service.py  test_reminder_no_auto_live.py  test_reminder_scheduler.py  test_scaffold.py  test_secretary_route_workflow.py  test_stt_engine.py  test_telegram_calls.py  test_tts_engine.py  test_wake_word.py
(+22 files in other folders)
