[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "secretary-ai"
version = "0.1.0"
description = "AI-powered phone secretary for call handling, calendar operations, and follow-ups."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "edge-tts>=7.0.0",
  "faster-whisper>=1.1.1",
  "imageio-ffmpeg>=0.6.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "py-tgcalls>=2.2.11",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "telethon>=1.43.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
